consistent spacing in menu, fixed bullets clipping, cv styling

--- a/rs-skins/rs-lga.css
+++ b/rs-skins/rs-lga.css
@@ -89,9 +89,7 @@
 	width: 100%;
 	height: auto;
 	margin: 0 auto; 
-
 	text-align: center;
-	line-height: 15px;
 	overflow: hidden;
 }
 .rsLGA .rsBullet {
