--- a/style.css
+++ b/style.css
@@ -72,12 +72,27 @@ ul {
 }
 
 .location {
+	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
 	font-size: 12px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	color: gray;
 	padding: 0;
 	margin: 0 0 15px 0;
+}
+
+.resume_section {
+	font-family: "News Gothic", 'Arial Narrow', sans-serif; 
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	color: dimgray;
+	padding: 0;
+	margin: 0;
+}
+
+li.resume {
+	padding: 0 0 40px 0;
 }
 
 .caption {
@@ -189,7 +204,7 @@ li.indent {
 	-webkit-font-smoothing: antialiased;
 	font-size: 16px;
 	line-height: 1.3;
-	color: black; 
+	color: dimgray; 
 	padding: 0 0 10px 10px;
 	list-style-type: none;
 }
@@ -262,7 +277,7 @@ a:hover {
 }
 
 h2#project_menu {
-	margin: 0;
+	margin: 10px 0;
 	padding: 0;
 }
 
